[package]
name = "checkin-okxyz"
authors = ["Aizen"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
strip = true
debug-assertions = false
panic = "abort"
codegen-units = 1
lto=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
reqwest = { version = "0.12.24", features = ["json"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
