[package]
name = "checkin-okxyz"
authors = ["Aizen"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
strip = true
debug-assertions = false
panic = "abort"
codegen-units = 1
lto=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
dotenvy = "0.15.7"
headless_chrome = "1.0.18"
reqwest = { version = "0.12.24", features = ["cookies", "json"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "default"] }
